--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
+    "node-cron": "^3.0.3",
     "razorpay": "^2.9.4",
     "validator": "^13.12.0"
   },
