--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "startServer": "nodemon backend/src/index.js",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint src --ext js,jsx --fix --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install",
     "node": "true"
@@ -23,6 +24,7 @@
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "ngrok": "^5.0.0-beta.2",
+    "prop-types": "^15.8.1",
     "qs": "^6.12.0",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
