--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "lint": "eslint .  --ext js --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint  . --ext js --fix --report-unused-disable-directives --max-warnings 0"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +28,15 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-css": "^0.8.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.0",
+    "stylelint": "^15.10.2"
   }
 }
