Refactored Ordering page design with state handling

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,22 +16,19 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.7.1",
+    "@dotlottie/react-player": "^1.6.19",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.8",
-    "firebase": "^10.0.0",
     "framer-motion": "^10.13.1",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
-    "ngrok": "^5.0.0-beta.2",
     "prop-types": "^15.8.1",
-    "qs": "^6.12.0",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "shortid": "^2.2.16",
     "styled-components": "^6.0.5",
     "universal-cookie": "^7.1.4",
     "zustand": "^4.3.9"
@@ -50,7 +47,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
     "stylelint": "^15.10.2",
