--- a/backend/package.json
+++ b/backend/package.json
@@ -14,21 +14,23 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "razorpay": "^2.9.4",
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0",
     "eslint": "^8.45.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
@@ -36,6 +38,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.0.0",
     "stylelint": "^15.10.2"
   }
