--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5",
