--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@dotlottie/react-player": "^1.6.19",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@react-spring/parallax": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
     "axios": "^1.6.8",
     "framer-motion": "^10.13.1",
     "lottie-react": "^2.4.0",
